hook up browsersync to be more flexible

--- a/Frontend/views/styleguide.jade
+++ b/Frontend/views/styleguide.jade
@@ -10,7 +10,7 @@ block mainContent
     article.main__container--dark
         .main__layout
             section.section__pane
-                h2.underline Fonts
+                h2.underline Fonts 1213
                 p This is Lato, default base 16px
                 p.light This is Lato 300 (light)
                 p.bold This is Lato 700 (bold)
