--- a/Frontend/views/index.jade
+++ b/Frontend/views/index.jade
@@ -6,5 +6,5 @@ html(lang="en")
     #app
     #hello
 
-    script(src='Assets/js/vendors.js')
-    script(src='Assets/js/app.js')
+    script(src='/Assets/honda/js/vendors.js')
+    script(src='/Assets/honda/js/app.js')
